<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C4B3FF03"
    tools:context=".iq17">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/iq2text"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:background="#F50057"
                android:padding="5dp"
                android:text="@string/iq17q"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif"
                app:layout_constraintBottom_toTopOf="@+id/tableRow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.148" />


            <TextView
                android:id="@+id/iq17aA"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="#2979FF"
                android:onClick="iqA"
                android:padding="5dp"
                android:text="@string/iq17aa"

                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/iq17aB"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="#2979FF"
                android:onClick="iqB"
                android:padding="5dp"
                android:text="@string/iq17ab"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />


            <TextView
                android:id="@+id/iq17aC"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="#2979FF"
                android:onClick="iqC"
                android:padding="5dp"
                android:text="@string/iq17ac"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/iq17aD"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="#2979FF"
                android:onClick="iqD"
                android:padding="5dp"
                android:text="@string/iq17ad"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>