<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4B3FF03"
    android:orientation="vertical"
    tools:context=".iq10">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <TextView
        android:id="@+id/iq2text"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:background="#F50057"
        android:padding="5dp"
        android:text="@string/iq10q"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#F7030303"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />



    <TableLayout
        android:id="@+id/o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/iq10aA"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="#2979FF"
                android:onClick="iq10aA"
                android:padding="5dp"
                android:text="@string/iq10aa"

                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/iq10aB"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="#2979FF"
                android:onClick="iq10aB"
                android:padding="5dp"
                android:text="@string/iq10ab"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/iq10aC"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="#2979FF"
                android:onClick="iq10aC"
                android:padding="5dp"
                android:text="@string/iq10ac"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/iq10aD"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="#2979FF"
                android:onClick="iq10aD"
                android:padding="5dp"
                android:text="@string/iq10ad"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />
        </TableRow>

    </TableLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/iq10aE"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:background="#2979FF"
                android:onClick="iq10aE"
                android:padding="5dp"
                android:text="@string/iq10ae"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#F7030303"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="serif" />



        </TableRow>
    </TableLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




</LinearLayout>